# ynam

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/explanation/: zero-based-budgeting.md
docs/how-to/: README.md  check-status.md  configure-sources.md  fetch-transactions.md  initialize-database.md  inspect-category.md  review-transactions.md  set-monthly-budget.md  view-spending-report.md
docs/reference/: README.md  cli-commands.md  config-file.md  database-schema.md
docs/tutorial/: getting-started.md
scripts/: generate_cli_reference.py  generate_schema_reference.py
tests/: __init__.py  test_dates.py
tests/domain/: test_budget.py  test_transactions.py
ynam/: __init__.py  cli.py  config.py  dates.py  db.py  starling.py
ynam/commands/: __init__.py  admin.py  budget.py  report.py  review.py  sync.py  transactions.py
ynam/domain/: __init__.py  budget.py  models.py  report.py  transactions.py
ynam/integrations/: __init__.py
ynam/store/: __init__.py  queries.py  schema.py
